// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeReducer  should handle GET_USER_LOCATION_SUCCEEDED 1`] = `
Object {
  "historyView": false,
  "routePlannerView": false,
  "trafficImagesView": false,
  "userLocation": Array [
    undefined,
  ],
}
`;

exports[`HomeReducer  should handle HISTORY_VIEW 1`] = `
Object {
  "historyView": true,
  "routePlannerView": false,
  "trafficImagesView": false,
  "userLocation": Array [],
}
`;

exports[`HomeReducer  should handle TOGGLE_ROUTE_PLANNER 1`] = `
Object {
  "historyView": false,
  "routePlannerView": true,
  "trafficImagesView": false,
  "userLocation": Array [],
}
`;

exports[`HomeReducer  should handle TOGGLE_TRAFFIC_IMAGES_VIEW 1`] = `
Object {
  "historyView": false,
  "routePlannerView": false,
  "trafficImagesView": false,
  "userLocation": Array [],
}
`;

exports[`HomeReducer  should return the initial state 1`] = `
Object {
  "historyView": false,
  "routePlannerView": false,
  "trafficImagesView": false,
  "userLocation": Array [],
}
`;
